--- a/surfit/vc7/surfit.vcproj
+++ b/surfit/vc7/surfit.vcproj
@@ -6047,6 +6047,9 @@
 				RelativePath="..\src\surfit\interface\geom.i">
 			</File>
 			<File
+				RelativePath="..\src\surfit\interface\hist.i">
+			</File>
+			<File
 				RelativePath="..\src\surfit\interface\solve.i">
 			</File>
 			<File
@@ -6057,7 +6060,7 @@
 						Name="VCCustomBuildTool"
 						CommandLine="surfit_swig.bat
 "
-						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;"
+						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;../src/surfit/interface/hist.i"
 						Outputs="../src/surfit/surfit_wrap.cxx"/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6066,7 +6069,7 @@
 						Name="VCCustomBuildTool"
 						CommandLine="surfit_swig.bat
 "
-						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;"
+						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;../src/surfit/interface/hist.i"
 						Outputs="../src/surfit/surfit_wrap.cxx"/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6075,7 +6078,7 @@
 						Name="VCCustomBuildTool"
 						CommandLine="surfit_swig.bat
 "
-						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;"
+						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;../src/surfit/interface/hist.i"
 						Outputs="../src/surfit/surfit_wrap.cxx"/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6084,7 +6087,7 @@
 						Name="VCCustomBuildTool"
 						CommandLine="surfit_swig.bat
 "
-						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;"
+						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;../src/surfit/interface/hist.i"
 						Outputs="../src/surfit/surfit_wrap.cxx"/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6093,7 +6096,7 @@
 						Name="VCCustomBuildTool"
 						CommandLine="surfit_swig.bat
 "
-						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;"
+						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;../src/surfit/interface/hist.i"
 						Outputs="../src/surfit/surfit_wrap.cxx"/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -6102,7 +6105,7 @@
 						Name="VCCustomBuildTool"
 						CommandLine="surfit_swig.bat
 "
-						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;"
+						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;../src/surfit/interface/hist.i"
 						Outputs="../src/surfit/surfit_wrap.cxx"/>
 				</FileConfiguration>
 			</File>
