--- a/surfit/vc8/surfit.vcproj
+++ b/surfit/vc8/surfit.vcproj
@@ -7183,7 +7183,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						CommandLine="surfit_swig.bat&#x0D;&#x0A;"
-						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;"
+						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;../src/surfit/interface/hist.i"
 						Outputs="../src/surfit/surfit_wrap.cxx"
 					/>
 				</FileConfiguration>
@@ -7193,7 +7193,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						CommandLine="surfit_swig.bat&#x0D;&#x0A;"
-						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;"
+						AdditionalDependencies="../src/surfit/interface/fileio.i;../src/surfit/interface/solve.i;../src/surfit/interface/task.i;../src/surfit/interface/geom.i;../src/surfit/interface/func.i;../src/surfit/interface/curv.i;../src/surfit/interface/hist.i"
 						Outputs="../src/surfit/surfit_wrap.cxx"
 					/>
 				</FileConfiguration>
