--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -109,6 +109,7 @@ INPUT                  = src/install.doc \
 			 src/compare.doc \
 			 src/stringmatch.doc \
 			 src/filematch.doc \
+			 src/formats.doc \
 			 ../src/surfit/cmofs.h \
 			 ../src/surfit/variables_tcl.h \
                          ../src/surfit/pnts_tcl.h \ 
