git-svn-id: svn://localhost/trunk@1043 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/vc7/freeflow.vcproj
+++ b/surfit/vc7/freeflow.vcproj
@@ -27,7 +27,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -49,7 +49,7 @@
 				OutputFile="../bin/libfreeflow.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\libs\tcl8.3.5\win\RELEASE"
 				ProgramDatabaseFile=".\../Release/libfreeflow.pdb"
 				ImportLibrary="../bin/libfreeflow.lib"
 				TargetMachine="1"/>
@@ -93,7 +93,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -162,7 +162,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -Id:\develop\libs\stxxl/ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE /MDd /Zi /Od -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Id:\develop\libs\boost /EHsc /EHs /wd4101 /wd4290 /wd4800 /wd4244 /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4996 -D_SCL_SECURE_NO_DEPRECATE "
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,C:\Tcl\include\;;..\..\libs\stxxl;..\..\libs\boost\include\boost-1_33_1"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;XXL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -232,7 +232,7 @@
 				AdditionalOptions="/Gs /Gs  -DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -I../../ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DBOOST_ALL_DYN_LINK -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Ic:\boost /EHsc /EHs /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4244 /wd4267 /wd4311 /wd4800 /wd4101 /wd4307 /wd4003 -DSTXXL_VERBOSE_LEVEL=0"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,C:\Tcl\include\;..\..\libs\stxxl;..\..\libs\boost\include\boost-1_33_1"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XXL"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -254,7 +254,7 @@
 				OutputFile="../bin/libfreeflow.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib;..\..\libs\stxxl\lib71;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\libs\tcl8.3.5\win\RELEASE;..\..\libs\stxxl\lib71;..\..\libs\boost\lib"
 				ProgramDatabaseFile=".\../Release/libfreeflow.pdb"
 				ImportLibrary="../bin/libfreeflow.lib"
 				TargetMachine="1"/>
@@ -304,7 +304,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -328,7 +328,7 @@
 				OutputFile="../bin/libfreeflow.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\libs\tcl8.3.5\win\RELEASE"
 				ProgramDatabaseFile=".\../Release/libfreeflow.pdb"
 				ImportLibrary="../bin/libfreeflow.lib"
 				TargetMachine="1"/>
@@ -378,7 +378,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -402,7 +402,7 @@
 				OutputFile="../bin/libfreeflow.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\libs\tcl8.3.5\win\RELEASE"
 				ProgramDatabaseFile=".\../Release/libfreeflow.pdb"
 				ImportLibrary="../bin/libfreeflow.lib"
 				TargetMachine="1"/>
