--- a/surfit/vc7/surfit_io.vcproj
+++ b/surfit/vc7/surfit_io.vcproj
@@ -28,7 +28,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,..\..\libs\jpeg-6b\,C:\Tcl\include\,..\..\libs\NETCDF\LIBSRC"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;surfit_io_EXPORTS"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -52,7 +52,7 @@
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,C:\Tcl\lib,..\..\libs\zlib123-dll\lib\,..\..\libs\netcdf\libsrc\"
+				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,..\..\libs\tcl8.3.5\win\RELEASE,..\..\libs\zlib123-dll\lib\,..\..\libs\netcdf\libsrc\"
 				IgnoreDefaultLibraryNames="LIBCMT"
 				ProgramDatabaseFile=".\../Release/libsurfit_io.pdb"
 				ImportLibrary="../bin/libsurfit_io.lib"
@@ -97,7 +97,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,..\..\LIBS\JPEG-6B,C:\Tcl\include\,..\..\libs\NETCDF\LIBSRC"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\LIBS\JPEG-6B&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;surfit_io_EXPORTS"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -167,7 +167,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -Id:\develop\libs\stxxl/ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE /MDd /Zi /Od -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Id:\develop\libs\boost /EHsc /EHs /wd4101 /wd4290 /wd4800 /wd4244 /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4996 -D_SCL_SECURE_NO_DEPRECATE "
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,..\..\LIBS\JPEG-6B,C:\Tcl\include\,..\..\libs\NETCDF\LIBSRC;..\..\libs\stxxl;..\..\libs\boost\include\boost-1_33_1"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\LIBS\JPEG-6B&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;XXL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -238,7 +238,7 @@
 				AdditionalOptions="/Gs /Gs  -DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -Id:\develop\libs\stxxl/ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE /MD /O2 -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Id:\develop\libs\boost /EHsc /EHs /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4244 /wd4996 /wd4800 /wd4290 /wd4101 -D_SCL_SECURE_NO_DEPRECATE  -DSTXXL_VERBOSE_LEVEL=0"
 				Optimization="2"
 				InlineFunctionExpansion="2"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,..\..\libs\jpeg-6b\,C:\Tcl\include\,..\..\libs\NETCDF\LIBSRC;..\..\libs\stxxl;..\..\libs\boost\include\boost-1_33_1"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XXL"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -262,7 +262,7 @@
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,C:\Tcl\lib,..\..\libs\zlib123-dll\lib\,..\..\libs\netcdf\libsrc\;..\..\libs\stxxl\lib71;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,..\..\libs\tcl8.3.5\win\RELEASE,..\..\libs\zlib123-dll\lib\,..\..\libs\netcdf\libsrc\;..\..\libs\stxxl\lib71;..\..\libs\boost\lib"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit_io.pdb"
 				ImportLibrary="../bin/libsurfit_io.lib"
@@ -314,7 +314,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,..\..\libs\jpeg-6b\,C:\Tcl\include\,..\..\libs\NETCDF\LIBSRC"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;surfit_io_EXPORTS"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -339,7 +339,7 @@
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,C:\Tcl\lib,..\..\libs\zlib123-dll\lib\,..\..\libs\netcdf\libsrc\"
+				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,..\..\libs\tcl8.3.5\win\RELEASE,..\..\libs\zlib123-dll\lib\,..\..\libs\netcdf\libsrc\"
 				IgnoreDefaultLibraryNames="LIBCMT"
 				ProgramDatabaseFile=".\../Release/libsurfit_io.pdb"
 				ImportLibrary="../bin/libsurfit_io.lib"
@@ -391,7 +391,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,../src/surfit,..\..\libs\jpeg-6b\,C:\Tcl\include\,..\..\libs\NETCDF\LIBSRC"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../src/surfit;&quot;..\..\libs\jpeg-6b\&quot;;../../libs/tcl8.3.5/generic;..\..\libs\NETCDF\LIBSRC"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;surfit_io_EXPORTS"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -416,7 +416,7 @@
 				OutputFile="../bin/libsurfit_io.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,C:\Tcl\lib,..\..\libs\zlib123-dll\lib\,..\..\libs\netcdf\libsrc\"
+				AdditionalLibraryDirectories="..\..\libs\jpeg-6b,..\..\libs\tcl8.3.5\win\RELEASE,..\..\libs\zlib123-dll\lib\,..\..\libs\netcdf\libsrc\"
 				IgnoreDefaultLibraryNames="LIBCMT"
 				ProgramDatabaseFile=".\../Release/libsurfit_io.pdb"
 				ImportLibrary="../bin/libsurfit_io.lib"
