--- a/surfit/vc7/surfit.vcproj
+++ b/surfit/vc7/surfit.vcproj
@@ -23,7 +23,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;DEBUG"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -100,7 +100,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -123,7 +123,7 @@
 				OutputFile="../bin/libsurfit.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\libs\tcl8.3.5\win\RELEASE"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit.pdb"
 				ImportLibrary="../bin/libsurfit.lib"
@@ -169,7 +169,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -Id:\develop\libs\stxxl/ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE /MDd /Zi /Od -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Id:\develop\libs\boost /EHsc /EHs /wd4101 /wd4290 /wd4800 /wd4244 /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4996 -D_SCL_SECURE_NO_DEPRECATE "
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\;..\..\libs\stxxl;..\..\libs\boost\include\boost-1_33_1"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;DEBUG;XXL"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -242,7 +242,7 @@
 				GlobalOptimizations="TRUE"
 				InlineFunctionExpansion="2"
 				ImproveFloatingPointConsistency="TRUE"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\;..\..\libs\stxxl;..\..\libs\boost\include\boost-1_33_1"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XXL"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -266,7 +266,7 @@
 				OutputFile="../bin/libsurfit.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib;..\..\libs\stxxl\lib71;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\libs\tcl8.3.5\win\RELEASE;..\..\libs\stxxl\lib71;..\..\libs\boost\lib"
 				IgnoreDefaultLibraryNames="LIBC"
 				GenerateDebugInformation="FALSE"
 				ProgramDatabaseFile=".\../Release/libsurfit.pdb"
@@ -320,7 +320,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -344,7 +344,7 @@
 				OutputFile="../bin/libsurfit.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\libs\tcl8.3.5\win\RELEASE"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit.pdb"
 				ImportLibrary="../bin/libsurfit.lib"
@@ -397,7 +397,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="TRUE"
 				OptimizeForProcessor="3"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
@@ -421,7 +421,7 @@
 				OutputFile="../bin/libsurfit.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\libs\tcl8.3.5\win\RELEASE"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit.pdb"
 				ImportLibrary="../bin/libsurfit.lib"
