--- a/surfit/vc8/surfit.vcproj
+++ b/surfit/vc8/surfit.vcproj
@@ -48,7 +48,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;DEBUG;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=1;_HAS_ITERATOR_DEBUGGING=1;_SCL_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -153,7 +153,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -188,7 +188,7 @@
 				OutputFile="../bin/libsurfit.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit.pdb"
 				ImportLibrary="../bin/libsurfit.lib"
@@ -254,7 +254,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="-DSORT_OPT_PREFETCHING -DUSE_MALLOC_LOCK -DCOUNT_WAIT_TIME -I../../ -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_RTLDLL -DBOOST_LIB_DIAGNOSTIC -DBOOST_ALL_DYN_LINK -DSTXXL_BOOST_TIMESTAMP -DSTXXL_BOOST_CONFIG -DSTXXL_BOOST_FILESYSTEM -DSTXXL_BOOST_THREADS -DSTXXL_BOOST_RANDOM -Ic:\boost /EHsc /EHs /wd4820 /wd4217 /wd4668 /wd4619 /wd4625 /wd4626 /wd4355 /wd4244 /wd4267 /wd4311 /wd4800 /wd4101 /wd4307 /wd4003 -DSTXXL_VERBOSE_LEVEL=1"
 				Optimization="0"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\;..\..\libs\stxxl;..\..\libs\boost\include\boost-1_33_1"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;DEBUG;XXL;_CRT_SECURE_NO_DEPRECATE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -358,7 +358,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\;..\..\libs\stxxl;..\..\libs\boost\include\boost-1_33_1"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic;..\..\libs\stxxl;&quot;..\..\libs\boost\include\boost-1_33_1&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XXL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -391,7 +391,7 @@
 				OutputFile="../bin/libsurfit.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="C:\Tcl\lib;..\..\libs\stxxl\lib80;..\..\libs\boost\lib"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE;..\..\libs\stxxl\lib80;..\..\libs\boost\lib"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit.pdb"
 				ImportLibrary="../bin/libsurfit.lib"
@@ -462,7 +462,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -497,7 +497,7 @@
 				OutputFile="../bin/libsurfit.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit.pdb"
 				ImportLibrary="..\bin\libsurfit.lib "
@@ -568,7 +568,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
+				AdditionalIncludeDirectories="../src/sstuff;../src/sstuff/ptypes;../../libs/tcl8.3.5/generic"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -603,7 +603,7 @@
 				OutputFile="../bin/libsurfit.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="C:\Tcl\lib"
+				AdditionalLibraryDirectories="..\..\LIBS\TCL8.3.5\WIN\RELEASE"
 				IgnoreDefaultLibraryNames="LIBC"
 				ProgramDatabaseFile=".\../Release/libsurfit.pdb"
 				ImportLibrary="..\bin\libsurfit.lib "
